kubernetes_prod/django-app.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  labels:
    app: django-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name : django-container
          image: iadmitriev/django_app:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata: 
  name: django
  labels:
    app: django-app
spec:
  selector:   
    app: django-app
  ports: 
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
